# PlateScanner

./: .dockerignore  .env-example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  launches.txt  main.py  pyproject.toml
airflow/: .dockerignore  Dockerfile  main.py  pyproject.toml
airflow/notebooks/: main.ipynb  yolo.ipynb
airflow/src/: __init__.py
app/: .dockerignore  Dockerfile  main.py  pyproject.toml
app/notebooks/: main.ipynb
app/src/: __init__.py  predict.py
articles/: Art1.md  Новые подходы к валидации нейронных сетей в          задаче детекции ГРЗ.md
flow/: augmentation_pipeline.py
mlflow/: .dockerignore  Dockerfile  README.md
mlflow/minio_client_config/: config.json
mlops/dbdata/: ib_buffer_pool
mlops/minio_data/.minio.sys/: format.json
mlops/mlflow/: requirements.txt
models/validators/: pretrained_validator.pickle
pages/: __init__.py
pages/predict/: __init__.py
pages/validate/: __init__.py
platescanner/: __init__.py  main.py
platescanner/bbox/: abstract.py  bbox_2xy.py  bbox_4xy.py  bbox_cwh.py
platescanner/model/: __init__.py  model.py
platescanner/model/yolo_ultralytics/: abstract.py  yolo.py  yolo_obb.py
platescanner/models/detectors/: yolo.py
platescanner/modes/: __init__.py  find_confidence.py  make_calibration_dataset.py  predict.py  train.py  validate.py
platescanner/nodeflow_env/functions/: __init__.py  augmentation.py  train_yolo.py  validate_yolo.py
platescanner/utils/: __init__.py  area_filter.py  arg_handler.py  draw_bbox.py  get_model.py  iou.py  nms.py  plates.py  plot_confusion_matrix.py  recognition_metrics.py  validate_funcs.py
platescanner/validator/: criteria.py  stat.py
scripts/: 3_merge_with_augmentation.py  augmentation_pipeline.py  car_plate_text.py  find_confidence.py  plate_text.py  target.py  target_aug.py  test_validate.py  train.py  upload_dataset.py  validate.py
scripts/make_dataset/: mk_dataset.py
scripts/predict/: cpt.py  pt.py
scripts/training/: cpt.py  yolo.py
src/: __init__.py  predict.py
src/bbox/: __init__.py  abstract.py  bbox_2xy.py  bbox_4xy.py  bbox_abs.py  bbox_cwh.py  bbox_obb.py  bbox_xyxy.py
src/model/: __init__.py  model.py  yolov5.py
src/nodeflow_env/: __init__.py
src/platescanner/: __init__.py
src/utils/: __init__.py  area_filter.py  box_area.py  draw_bbox.py  get_model.py  iou.py  nms.py  plot_confusion_matrix.py
src/validator/: __init__.py  custom_categories.py  stat.py
webcrane/: .webcraneignore  manifest.toml
workspace/: main.py  pyproject.toml
workspace/airflow_env/dags/: example.py  preprocess_data.py  yolo_experiment.py
workspace/scripts/: 1_merge_all_yolo_datasets.py  2_augmentation.py  3_merge_with_augmentation.py  augmentation_target.py  fine_tunning.py  target.py  valid.py  video_proc.py
workspace/src/: predict.py
workspace/src/data_utils/: __init__.py
workspace/src/data_utils/adapters/: __init__.py  auto.py  coco.py  yolo.py
workspace/src/data_utils/datasets/: __init__.py  abstract.py  yolo.py
(+48 files in other folders)
