[project]
name = "platescanner"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.5",
    "experimentator",
    "cvtk",
    "levenshtein>=0.27.1",
    "ultralytics>=8.3.106",
    "gitpython>=3.1.44", # for ultralytics
]

[tool.uv.sources]
experimentator = { git = "https://github.com/encore-ecosystem/Experimentator", branch = "basic_usage" }
cvtk = { git = "https://github.com/encore-ecosystem/CVTK", branch = "basic_usage" }
