[tool.poetry]
name = "platescanner"
version = "0.1.0"
description = ""
authors = [
    "Maksim Shushkevich <m.e.shushkevich@yandex.com>",
    "Pavel Lekomtsev <example@of.com>",

]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.1.1"
torch = {version = "^2.4.1+cu124", source = "pytorch-gpu"}
torchvision = {version = "^0.19.1+cu124", source = "pytorch-gpu"}
ultralytics = "^8.3.3"
clearml = "^1.16.4"
apache-airflow = "^2.10.2"
albumentations = "^1.4.17"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
